Upgrade to JVM 21 and Implement Modern Java Features (#2)
* Updated syntax to use JVM 21 features (pattern matching, records)